--- a/ComSocial.html
+++ b/ComSocial.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>Comunicación Social</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -13,9 +13,14 @@
 
 <style>
   body {color: #666666 !important;}
-
   p {line-height: 1.7;}
-
+  .title-esc {
+    padding-top: 70px;
+    position: relative;
+    letter-spacing: 3px;
+    padding-bottom: 70px;
+    max-width: fit-content;
+}
   .list-group-item {
     background-color: rgba(229, 232, 241, 0.5) !important;
     border: 0px solid #ddd !important;
@@ -66,7 +71,33 @@
 
   .hr-bottom {border-top: 3px solid #001970;}
   .hr-menu{border-top: 3px solid #eee;}
+  .bgheader {
+        background-color: transparent;
+        padding: 2rem 1rem;
+        color: #ffffff;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+    }
+    .overlay {
+    position: relative;
+    z-index: 1;
+}
 
+.overlay::after {
+    color: inherit;
+    background-color: rgba(0,0,0,.4);
+}
+.overlay::after {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    z-index: -1;
+}
   .btn-primary {
     background-color: #001970;
     border-color: #001970;
@@ -80,7 +111,11 @@
     text-align: left;
     padding: 15px;
   }
-
+.pucmm-btn-white{
+    color: #001970;
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
   .pucmm-btn-warning {
     color: #001970;
     background-color: #FBFF33;
@@ -156,9 +191,28 @@ bottom: 0px !important;
 </style>
 
 <body>
-  <div>
+  <!-- <div>
     <img src="banner.png" alt="" class="img-responsive">
-  </div>
+  </div> -->
+  <div class="container-fluid bgheader overlay" style="background-image: url('bg.jpg');">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
+                    <div class="container title-esc">
+                        <h3>Licenciaturas en</h3>
+                        <h1 style="margin-top: 0;">Comunicacion Social</h1>
+                        <p>Al comunicarnos proyectamos quienes somos y que queremos ser. ¡Vive la experiencia!</p>
+                        <a type="button" class="btn pucmm-btn-warning mayuscula" style="text-transform: uppercase;font-weight: bold;" href="">Admisiones</a>
+                        <a type="button" class="btn pucmm-btn-white mayuscula" style="text-transform: uppercase;font-weight: bold;" href="">Aplicar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
   <br>
   <div class="container pcajas">
     <div class="row">
