--- a/index.html
+++ b/index.html
@@ -12,32 +12,29 @@
 </head>
 
 <style>
-  body {
-    color: #666666 !important;
-  }
-
-  p {
+body {
+  color: #666666 !important;
+  font-family: Mulish !important;
+}
+p {
     line-height: 1.7;
-  }
-
-  .title-esc {
+}
+.title-esc {
     padding-top: 70px;
     position: relative;
     letter-spacing: 3px;
     padding-bottom: 70px;
     max-width: fit-content;
-  }
-
-  .list-group-item {
+}
+.list-group-item {
     background-color: rgba(229, 232, 241, 0.5) !important;
     border: 0px solid #ddd !important;
     font-size: 16px !important;
-    font-family: Mulish !important;
     font-style: normal !important;
     font-weight: normal !important;
     line-height: 200% !important;
     color: rgba(0, 0, 0, 0.7) !important;
-  }
+}
 
   .list-group-item a {
     color: rgba(0, 0, 0, 0.7) !important;
@@ -52,7 +49,6 @@
   .nav-tabs>li.active>a:focus,
   .nav-tabs>li.active>a:hover {
     background-color: #001970 !important;
-    font-family: Mulish !important;
     font-style: normal !important;
     font-weight: 800 !important;
     font-size: 14px !important;
@@ -66,7 +62,6 @@
   }
 
   .nav-tabs>li>a {
-    font-family: Mulish !important;
     font-style: normal !important;
     font-weight: 800 !important;
     font-size: 14px !important;
@@ -157,7 +152,9 @@
     padding-bottom: 0;
     font-size: 15px !important;
   }
-
+  ul.menu2-left{
+  text-transform: uppercase;
+}
   .imgcarrera {
     width: 354px;
     height: 219px;
@@ -224,9 +221,6 @@
 </style>
 
 <body>
-  <!-- <div>
-    <img src="banner.png" alt="" class="img-responsive">
-  </div> -->
   <div class="container-fluid bgheader overlay" style="background-image: url('bg.jpg');">
     <div class="row">
       <div class="col-md-12">
@@ -238,10 +232,10 @@
               <h3>Licenciaturas en</h3>
               <h1 style="margin-top: 0;">Comunicacion Social</h1>
               <p>Al comunicarnos proyectamos quienes somos y que queremos ser. ¡Vive la experiencia!</p>
-              <a type="button" class="btn pucmm-btn-warning mayuscula"
-                style="text-transform: uppercase;font-weight: bold;" href="https://www.pucmm.edu.do/admisiones">Admisiones</a>
-              <a type="button" class="btn pucmm-btn-white mayuscula"
-                style="text-transform: uppercase;font-weight: bold;" href="https://www.pucmm.edu.do/admisiones/aplicar-grado">Aplicar</a>
+              <a type="button" class="btn pucmm-btn-warning text-uppercase"
+              style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones">Admisiones</a>
+            <a type="button" class="btn pucmm-btn-white text-uppercase"
+              style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones/aplicar-grado">Aplicar</a>
             </div>
           </div>
         </div>
@@ -261,14 +255,14 @@
           <li class="list-group-item"><a href="https://www.pucmm.edu.do/orientacion">Departamento de Orientación</a></li>
           <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones/conexiones-globales">Conexiones Globales</a></li>
         </ul>
-        <a type="button" class="btn pucmm-btn-primary" href="https://www.pucmm.edu.do/admisiones/solicitud-admision">Formulario de Admisión</a>
+        <a type="button" class="btn pucmm-btn-primary text-uppercase" href="https://www.pucmm.edu.do/admisiones/solicitud-admision">Formulario de Admisión</a>
         <hr class="hr-menu">
         <ul class="list-group menu2-left">
-          <li class="list-group-item"><a href="https://www.pucmm.edu.do/academico/oferta-grado">OFERTA ACADÉMICA</a></li>
-          <li class="list-group-item"><a href="https://humanidades.pucmm.edu.do/">CIENCIAS SOCIALES, HUMANIDADES Y ARTES</a></li>
-          <li class="list-group-item"><a href="https://economicas.pucmm.edu.do/">CIENCIAS ECONÓMICAS Y ADMINISTRATIVAS</a></li>
-          <li class="list-group-item"><a href="https://www.pucmm.edu.do/ingenierias">CIENCIAS E INGENIERÍA</a></li>
-          <li class="list-group-item"><a href="https://www.pucmm.edu.do/salud">CIENCIAS DE LA SALUD</a></li>
+          <li class="list-group-item"><a href="https://www.pucmm.edu.do/academico/oferta-grado">Oferta académica</a></li>
+          <li class="list-group-item"><a href="https://humanidades.pucmm.edu.do/">Ciencias sociales, humanidades y artes</a></li>
+          <li class="list-group-item"><a href="https://economicas.pucmm.edu.do/">Ciencias económicas y administrativas</a></li>
+          <li class="list-group-item"><a href="https://www.pucmm.edu.do/ingenierias">Ciencias e ingeniería</a></li>
+          <li class="list-group-item"><a href="https://www.pucmm.edu.do/salud">Ciencias de la salud</a></li>
         </ul>
         <hr class="hr-menu">
       </div>
@@ -282,7 +276,6 @@
           </ul>
           <div class="tab-content">
             <div id="home" class="tab-pane fade in active">
-              <!-- <h3>Perfil del egresado</h3> -->
               <p>Los estudios de grado en Comunica­ción Social se comienzan a impartir en el Campus de Santiago en el
                 2002 y en el Campus de Santo Domingo en 2003, y el Consejo Académico de la Pontificia Universidad
                 Católica Madre y Maestra (PUCMM) aprueba las concentraciones de Producción Audiovisual y Comunicación
@@ -372,7 +365,6 @@
                         tanto a nivel institucional como organizacional.</p>
                       <p>Aplica un criterio crítico a su entorno, eligiendo la mejor alternativa en su actuar,
                         contribuyendo a la resolución de problemas en un entorno dinámico.</p>
-
                     </div>
                   </div>
                 </div>
@@ -676,8 +668,8 @@
           <p>En un mundo donde la preparación y las experiencias personales han adquirido relevancia para insertarse en
             un mundo laboral cada vez más global, es importante participar en actividades, programas y vivencias
             internacionales que ayuden a desarrollar</p>
-          <a class="btn pucmm-btn-warning" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales">CONOCE MÁS</a>
-          <a class="btn btn-primary" href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas">VER PROGRAMA</a>
+            <a class="btn pucmm-btn-warning text-uppercase" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales">Conoce más</a>
+            <a class="btn btn-primary text-uppercase"  href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas">Ver programa</a>    
         </div>
         <div class="col-md-6">
           <img class="img-fluid" src="chica-internacional.png" alt="">
