--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 </head>
 
 <style>
+  h1{
+  font-weight: 600;
+  Font-size: 50px;
+  Color: #333333;
+  }
 body {
-  color: #666666 !important;
+  font-size: 16px;
+  color: #333;
   font-family: Mulish !important;
 }
 p {
@@ -25,6 +31,9 @@ p {
     letter-spacing: 3px;
     padding-bottom: 70px;
     max-width: fit-content;
+}
+.title-esc,.title-esc h1{
+  color: #ffffff !important;
 }
 .list-group-item {
     background-color: rgba(229, 232, 241, 0.5) !important;
@@ -85,7 +94,6 @@ p {
   .bgheader {
     background-color: transparent;
     padding: 2rem 1rem;
-    color: #ffffff;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
