--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ p {
   }
 
   .video-form {
-    background-color: #00187070;
+    background-color: #e5e8f1;
     justify-content: center;
   }
 
@@ -199,7 +199,7 @@ p {
   }
 
   .carousel-bg {
-    background-color: #00187054;
+    background-color: #e5e8f1;
   }
 
   .carousel-img>img {
