--- a/index.html
+++ b/index.html
@@ -197,7 +197,12 @@ p {
   .carousel-control.right {
     background-image: none !important;
   }
-
+  .carousel-indicators li{
+    border: 1px solid #001970;
+  }
+  .carousel-indicators .active {
+    background-color: #001970;
+}
   .carousel-bg {
     background-color: #e5e8f1;
   }
