--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
 }
 p {
     line-height: 1.7;
+    margin: 0 0 25px 0;
 }
 .title-esc {
     padding-top: 70px;
@@ -49,6 +50,7 @@ p {
 
   .comcar {
     border-bottom: 3px solid #001970;
+    margin-bottom: 20px;
   }
 
   .comcar>li.active>a,
