--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p {
 .title-esc {
     padding-top: 70px;
     position: relative;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     padding-bottom: 70px;
     max-width: fit-content;
 }
@@ -41,6 +41,7 @@ p {
     font-weight: normal !important;
     line-height: 200% !important;
     color: rgba(0, 0, 0, 0.7) !important;
+    padding: 15px 20px;
 }
 
   .list-group-item a {
@@ -104,7 +105,7 @@ p {
 
   .overlay::after {
     color: inherit;
-    background-color: rgba(0, 0, 0, .4);
+    background-color: rgba(0,25,112,.35);
   }
 
   .overlay::after {
@@ -252,7 +253,7 @@ p {
           <div class="title-esc">
             <h3>Licenciaturas en</h3>
             <h1 style="margin-top: 0;">Comunicacion Social</h1>
-            <p>Al comunicarnos proyectamos quienes somos y que queremos ser. ¡Vive la experiencia!</p>
+            <p>Al comunicarnos proyectamos quienes somos y que queremos ser.<br>¡Vive la experiencia!</p>
             <a type="button" class="btn pucmm-btn-warning text-uppercase"
               style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones">Admisiones</a> <a type="button" class="btn pucmm-btn-white text-uppercase"
               style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones/aplicar-grado">Aplicar</a> </div>
