--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ p {
         <div class="col-md-6 col-md-offset-6">
           <div class="title-esc">
             <h3>Licenciaturas en</h3>
-            <h1 style="margin-top: 0;">Comunicacion Social</h1>
+            <h1 style="margin-top: 0;">Comunicación Social</h1>
             <p>Al comunicarnos proyectamos quienes somos y que queremos ser. ¡Vive la experiencia!</p>
             <a type="button" class="btn pucmm-btn-warning text-uppercase"
               style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones">Admisiones</a> <a type="button" class="btn pucmm-btn-white text-uppercase"
@@ -308,7 +308,7 @@ p {
               gestión y dirección de proyectos y producciones de comunicación manteniendo los principios éticos que
               distinguen a los y las profesionales de la comunicación.</p>
               <div class="embed-responsive embed-responsive-16by9 center-block">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nz5Q6QQzk_I"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cDCBZXfHNmk"></iframe>
                   </div><br>
 
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -472,9 +472,23 @@ p {
           </div>
           <div id="menu3" class="tab-pane fade">
             <h4>Dra. Ana Bélgica Güichardo <br />
-              Directora de la Escuela de Comunicación (ExprésatePUCMM)</h4>
+              Directora de la Escuela de Comunicación (ExprésatePUCMM), Campus de Santo Domingo</h4>
+              <p>anabguichardo@pucmm.edu.do</p>
             <h4>Lic. Anny Rosa <br />
-              Secretaria</h4>
+              Secretaria</h4><br />
+              <p> Teléfono: 809-535-0111 Ext. Escuela (2254)</p><br />
+              <p>annyrosa@pucmm.edu.do</p>
+              <a href="http://www.instagram.com/expresatepucmm" target="_blank">
+                <i class="fa fa-instagram"></i>
+            </a>
+              <br /><br />
+              <h4>Alejandro Esteban<br />
+                Director de la Escuela de Comunicación, Campus de Santiago</h4>
+                <p>aesteban@pucmm.edu.do</p>
+              <h4>Selene Infante <br />
+                Secretaria</h4><br />
+                <p>sinfante@pucmm.edu.do</p><br />
+                <p>Teléfono: 809-535-0111 Ext. Escuela (2254)</p>
           </div>
         </div>
         <hr class="hr-bottom">
