--- a/index.html
+++ b/index.html
@@ -475,20 +475,20 @@ p {
               Directora de la Escuela de Comunicación (ExprésatePUCMM), Campus de Santo Domingo</h4>
               <p>anabguichardo@pucmm.edu.do</p>
             <h4>Lic. Anny Rosa <br />
-              Secretaria</h4><br />
-              <p> Teléfono: 809-535-0111 Ext. Escuela (2254)</p><br />
+              Secretaria</h4>
+              <p> Teléfono: 809-535-0111 Ext. Escuela (2254)</p>
               <p>annyrosa@pucmm.edu.do</p>
               <a href="http://www.instagram.com/expresatepucmm" target="_blank">
-                <i class="fa fa-instagram"></i>
+                <i class="fa fa-instagram"></i>Sigue la escuela en Instagram
             </a>
               <br /><br />
               <h4>Alejandro Esteban<br />
                 Director de la Escuela de Comunicación, Campus de Santiago</h4>
                 <p>aesteban@pucmm.edu.do</p>
               <h4>Selene Infante <br />
-                Secretaria</h4><br />
-                <p>sinfante@pucmm.edu.do</p><br />
-                <p>Teléfono: 809-535-0111 Ext. Escuela (2254)</p>
+                Secretaria</h4>
+                <p>sinfante@pucmm.edu.do</p>
+                <p>Teléfono: 809 580-1962 Ext. Escuela (2254)</p>
           </div>
         </div>
         <hr class="hr-bottom">
