--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
 }
 p {
     line-height: 1.7;
+    margin: 0 0 25px 0!important;
 }
 .title-esc {
     padding-top: 70px;
@@ -49,6 +50,7 @@ p {
 
   .comcar {
     border-bottom: 3px solid #001970;
+    margin-bottom: 20px;
   }
 
   .comcar>li.active>a,
@@ -273,7 +275,7 @@ p {
           <li class="active"><a data-toggle="tab" href="#home">Comunicación Social</a></li>
           <li><a data-toggle="tab" href="#menu1">COC & COA</a></li>
           <li><a data-toggle="tab" href="#menu2">Ámbito laboral</a></li>
-          <li><a data-toggle="tab" href="#menu3">Tú Escuela</a></li>
+          <li><a data-toggle="tab" href="#menu3">Tu Escuela</a></li>
         </ul>
         <div class="tab-content">
           <div id="home" class="tab-pane fade in active">
