--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ p {
 .title-esc {
     padding-top: 70px;
     position: relative;
-    letter-spacing: 3px;
     padding-bottom: 70px;
     max-width: fit-content;
 }
@@ -238,7 +237,7 @@ p {
           <div class="title-esc">
             <h3>Licenciaturas en</h3>
             <h1 style="margin-top: 0;">Comunicación Social</h1>
-            <p>Al comunicarnos proyectamos quienes somos y que queremos ser. ¡Vive la experiencia!</p>
+            <p>Al comunicarnos proyectamos quienes somos y que queremos ser.<br> ¡Vive la experiencia!</p>
             <a type="button" class="btn pucmm-btn-warning text-uppercase"
               style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones">Admisiones</a> <a type="button" class="btn pucmm-btn-white text-uppercase"
               style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones/aplicar-grado">Aplicar</a> </div>
