--- a/index.html
+++ b/index.html
@@ -126,21 +126,39 @@ p {
     color: #fff;
     background-color: #001970;
     border-color: #001970;
+    text-align: left;
+    border-radius: 30px;
+  }
+  .pucmm-btn-primary:hover {
+    color: #001970;
+    text-decoration: none;
+    background-color: #ffffff;
+  }
+  .pucmm-btn-adm{
+    color: #fff;
+    background-color: #001970;
+    border-color: #001970;
     width: 100%;
     text-align: left;
     padding: 15px;
   }
-
+  .pucmm-btn-adm:hover {
+    color: #001970;
+    text-decoration: none;
+    background-color: #ffffff;
+  }
   .pucmm-btn-white {
     color: #001970;
     background-color: #ffffff;
     border-color: #ffffff;
+    border-radius: 30px;
   }
 
   .pucmm-btn-warning {
     color: #001970;
     background-color: #FBFF33;
     border-color: #FBFF33;
+    border-radius: 30px;
   }
 
   .pucmm-btn-primary:hover {
@@ -257,7 +275,7 @@ p {
         <li class="list-group-item"><a href="https://www.pucmm.edu.do/orientacion">Departamento de Orientación</a></li>
         <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones/conexiones-globales">Conexiones Globales</a></li>
       </ul>
-      <a type="button" class="btn pucmm-btn-primary text-uppercase" href="https://www.pucmm.edu.do/admisiones/solicitud-admision">Formulario de Admisión</a>
+      <a type="button" class="btn pucmm-btn-adm text-uppercase" href="https://www.pucmm.edu.do/admisiones/solicitud-admision">Formulario de Admisión</a>
       <hr class="hr-menu">
       <ul class="list-group menu2-left">
         <li class="list-group-item"><a href="https://www.pucmm.edu.do/academico/oferta-grado">Oferta académica</a></li>
@@ -649,7 +667,8 @@ Protagonista de la opera prima de una de las primeras directoras mujeres de cine
         <p>En un mundo donde la preparación y las experiencias personales han adquirido relevancia para insertarse en
           un mundo laboral cada vez más global, es importante participar en actividades, programas y vivencias
           internacionales que ayuden a desarrollar</p>
-        <a class="btn pucmm-btn-warning text-uppercase" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales">Conoce más</a> <a class="btn btn-primary text-uppercase"  href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas">Ver programa</a> </div>
+        <a class="btn pucmm-btn-warning text-uppercase" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales">Conoce más</a> 
+        <a class="btn pucmm-btn-primary text-uppercase"  href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas">Ver programa</a> </div>
       <div class="col-md-6"> <img class="img-fluid" src="chica-internacional.png" alt=""> </div>
     </div>
   </div>
