--- a/index.html
+++ b/index.html
@@ -153,14 +153,24 @@ p {
     border-color: #ffffff;
     border-radius: 30px;
   }
-
+  .pucmm-btn-white:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #001970;
+    border-color: #001970;
+  }
   .pucmm-btn-warning {
     color: #001970;
     background-color: #FBFF33;
     border-color: #FBFF33;
     border-radius: 30px;
   }
-
+  .pucmm-btn-warning:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #001970;
+    border-color: #001970;
+  }
   .pucmm-btn-primary:hover {
     color: #001970;
     text-decoration: none;
