--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@ p {
 }
 .list-group-item {
     background-color: rgba(229, 232, 241, 0.5) !important;
-    border: 0px solid #ddd !important;
+    border: none;
+    border-bottom: 2px solid #ddd !important;
     font-size: 16px !important;
     font-style: normal !important;
     font-weight: normal !important;
     line-height: 200% !important;
     color: rgba(0, 0, 0, 0.7) !important;
+    padding: 15px 20px;
 }
 
   .list-group-item a {
@@ -103,7 +105,7 @@ p {
 
   .overlay::after {
     color: inherit;
-    background-color: rgba(0, 0, 0, .4);
+    background-color: rgba(0, 25, 112, .3);
   }
 
   .overlay::after {
