--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ p {
 .title-esc,.title-esc h1{
   color: #ffffff !important;
 }
+
 .list-group-item {
     background-color: rgba(229, 232, 241, 0.5) !important;
     border: none;
-    border-bottom: 2px solid #ddd !important;
     font-size: 16px !important;
     font-style: normal !important;
     font-weight: normal !important;
@@ -43,12 +43,13 @@ p {
     color: rgba(0, 0, 0, 0.7) !important;
     padding: 15px 20px;
 }
-
   .list-group-item a {
     color: rgba(0, 0, 0, 0.7) !important;
     text-decoration: none !important;
   }
-
+  .menul-lef > .list-group-item{  
+    border-bottom: 2px solid #ddd !important;
+}
   .comcar {
     border-bottom: 3px solid #001970;
     margin-bottom: 20px;
@@ -118,7 +119,10 @@ p {
     content: "";
     z-index: -1;
   }
-
+.btn{
+  margin-right: 20px;
+  margin-top: 5px;
+}
   .btn-primary {
     background-color: #001970;
     border-color: #001970;
@@ -181,11 +185,9 @@ p {
 
   ul.menu2-left>.list-group-item {
     background-color: #ffffff !important;
-    line-height: 200% !important;
-    color: rgba(0, 0, 0, 0.7) !important;
     padding-top: 0;
     padding-bottom: 0;
-    font-size: 15px !important;
+    font-size: 14px !important;
   }
   ul.menu2-left{
   text-transform: uppercase;
