--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ p {
 .btn{
   margin-right: 20px;
   margin-top: 5px;
+  font-weight: bold;
 }
   .btn-primary {
     background-color: #001970;
@@ -270,9 +271,8 @@ p {
             <h3>Licenciaturas en</h3>
             <h1 style="margin-top: 0;">Comunicación Social</h1>
             <p>Al comunicarnos proyectamos quienes somos y que queremos ser.<br> ¡Vive la experiencia!</p>
-            <a type="button" class="btn pucmm-btn-warning text-uppercase"
-              style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones">Admisiones</a> <a type="button" class="btn pucmm-btn-white text-uppercase"
-              style="font-weight: bold;" href="https://www.pucmm.edu.do/admisiones/aplicar-grado">Aplicar</a> </div>
+            <a type="button" class="btn pucmm-btn-warning text-uppercase" href="https://www.pucmm.edu.do/admisiones">Admisiones</a> 
+              <a type="button" class="btn pucmm-btn-white text-uppercase" href="https://www.pucmm.edu.do/admisiones/aplicar-grado">Aplicar</a> </div>
         </div>
   </div>
 </div>
