--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<link href="https://fonts.googleapis.com/css?family=Mulish" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <style>
@@ -122,7 +123,7 @@ p {
 .btn{
   margin-right: 20px;
   margin-top: 5px;
-  font-weight: bold;
+  font-weight: 900;
 }
   .btn-primary {
     background-color: #001970;
