--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 h1,h2,h3,h4,h5,h6{
   font-weight: 900;
 }
+.colheight{
+  height: 450px;
+}
   h1{
   Font-size: 50px;
   Color: #333333;
@@ -237,7 +240,7 @@ p {
     background-color: #001970;
 }
   .carousel-bg {
-    background-color: #e5e8f1;
+    background: linear-gradient(90deg, #fbff33 40%, #e5e8f1 40%);
   }
 
   .carousel-img>img {
@@ -597,9 +600,9 @@ p {
       <div class="item active">
         <div class="container">
           <div class="row vertical-align">
-            <div class="col-md-10" style="margin: auto">
-              <div class="col-md-6 carousel-img text-center"><img class="img-fluid img-circle" src="Julietta-Rodriguez.jpg"></div>
-              <div class="col-md-6 carousel-texto">
+            <div class="col-md-12 colheight" style="margin: auto ">
+              <div class="col-md-5 carousel-img text-right"><img class="img-fluid img-circle" src="Julietta-Rodriguez.jpg"></div>
+              <div class="col-md-7 carousel-texto">
                 <h2>Hablan nuestros egresados</h2>
                 <p>"Lo que más agradezco de la Carrera de Comunicación Social es que durante mi educación me permitió́
                   explorar y experimentar en todas sus áreas. Hoy soy una artista y profesional con la confianza de
@@ -617,9 +620,9 @@ Protagonista de la opera prima de una de las primeras directoras mujeres de cine
       <div class="item">
         <div class="container">
           <div class="row vertical-align">
-              <div class="col-md-10" style="margin: auto">
-            <div class="col-md-6 carousel-img text-center"><img class="img-fluid img-circle" src="Laura-Perez-Rojas.jpg"> </div>
-            <div class="col-md-6 carousel-texto">
+              <div class="col-md-12 colheight" style="margin: auto">
+            <div class="col-md-5 carousel-img text-right"><img class="img-fluid img-circle" src="Laura-Perez-Rojas.jpg"> </div>
+            <div class="col-md-7 carousel-texto">
               <h2>Hablan nuestros egresados</h2>
               <p>"La comunicación es una carrera muy amplia, que permite a los profesionales desenvolverse en
                 diferentes ámbitos, ya sea en medios de comunicación, en el Estado, en empresas privadas, en docencia,
@@ -636,9 +639,9 @@ Protagonista de la opera prima de una de las primeras directoras mujeres de cine
       <div class="item">
         <div class="container">
           <div class="row vertical-align">
-              <div class="col-md-10" style="margin: auto">
-            <div class="col-md-6 carousel-img text-center"><img class="img-fluid img-circle" src="Kharla-Polonio.jpg"> </div>
-            <div class="col-md-6 carousel-texto">
+              <div class="col-md-12 colheight" style="margin: auto">
+            <div class="col-md-5 carousel-img text-right"><img class="img-fluid img-circle" src="Kharla-Polonio.jpg"> </div>
+            <div class="col-md-7 carousel-texto">
               <h2>Hablan nuestros egresados</h2>
               <p>"La mejor comunicación es la que se ejerce con pasión y respeto. Desde cualquier ámbito laboral,
                 quien se dedica a este oficio, debe apostar por hacerlo de manera responsable, aportando a la sociedad
@@ -654,9 +657,9 @@ Protagonista de la opera prima de una de las primeras directoras mujeres de cine
       <div class="item">
         <div class="container">
           <div class="row vertical-align">
-              <div class="col-md-10" style="margin: auto">
-            <div class="col-md-6 carousel-img text-center"><img class="img-fluid img-circle" src="Luis-Jose-Lopez-Luijo.jpg"> </div>
-            <div class="col-md-6 carousel-texto">
+              <div class="col-md-12 colheight" style="margin: auto">
+            <div class="col-md-5 carousel-img text-right"><img class="img-fluid img-circle" src="Luis-Jose-Lopez-Luijo.jpg"> </div>
+            <div class="col-md-7 carousel-texto">
               <h2>Hablan nuestros egresados</h2>
               <p>"La comunicación corporativa ha adquirido una importancia vital en la mayoría de las organizaciones.
                 Saber establecer y mantener relaciones positivas con las diferentes audiencias: públicos internos,
