--- a/index.html
+++ b/index.html
@@ -310,9 +310,10 @@ p {
       <div>
         <ul class="nav nav-tabs comcar">
           <li class="active"><a data-toggle="tab" href="#home">Comunicación Social</a></li>
-          <li><a data-toggle="tab" href="#menu1">COC & COA</a></li>
-          <li><a data-toggle="tab" href="#menu2">Ámbito laboral</a></li>
-          <li><a data-toggle="tab" href="#menu3">Tu Escuela</a></li>
+          <li><a data-toggle="tab" href="#menu1">COC</a></li>
+          <li><a data-toggle="tab" href="#menu2">COA</a></li>
+          <li><a data-toggle="tab" href="#menu3">Ámbito laboral</a></li>
+          <li><a data-toggle="tab" href="#menu4">Tu Escuela</a></li>
         </ul>
         <div class="tab-content">
           <div id="home" class="tab-pane fade in active">
@@ -401,7 +402,9 @@ p {
                   </div>
                 </div>
               </div>
-            </div>
+            </div>            
+          </div>
+          <div id="menu2" class="tab-pane fade"> 
             <h3>Licenciatura en Comunicación Audiovisual y Artes Cinematográficas (COA)</h3>
             <p>La licenciatura en Comunicación Audiovisual y Artes Cinematográficas se basa en un modelo educativo
               basado en competencias, que garantiza altos niveles de congruencia entre el perfil de egreso y las
@@ -485,7 +488,7 @@ p {
               </div>
             </div>
           </div>
-          <div id="menu2" class="tab-pane fade"> 
+          <div id="menu3" class="tab-pane fade"> 
             <ul>
               <li>
                 <h3>Comunicación Corporativa</h3>
@@ -508,7 +511,7 @@ p {
                 director de fotografía, director de casting, productor musical, entre otros. </p>
             </ul>
           </div>
-          <div id="menu3" class="tab-pane fade">
+          <div id="menu4" class="tab-pane fade">
             <h4>Dra. Ana Bélgica Güichardo <br />
               Directora de la Escuela de Comunicación (ExprésatePUCMM), Campus de Santo Domingo</h4>
               <p>anabguichardo@pucmm.edu.do</p>
