actualizacion programas y tu escuela

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 </head>
 
 <style>
@@ -347,6 +348,9 @@ p {
               Las personas egresadas de Comunicación Corporativa egresadas de la PUCMM se especializan en el diseño,
               gestión y dirección de proyectos y producciones de comunicación manteniendo los principios éticos que
               distinguen a los y las profesionales de la comunicación.</p>
+              <a type="button" class="btn pucmm-btn-adm text-uppercase" href="pensum-com-corporativa.pdf">Ver pensum</a>
+<br>
+<br>      
               <div class="embed-responsive embed-responsive-16by9 center-block">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cDCBZXfHNmk"></iframe>
                   </div><br>
@@ -416,6 +420,9 @@ p {
               propiamente audiovisuales (radio, televisión y cine), así como editoriales y digitales. Así mismo,
               abordarán con sentido creativo, integral, y ético el proceso de comunicación y la producción de
               contenidos.</p>
+              <a type="button" class="btn pucmm-btn-adm text-uppercase" href="pensum-com-audiovisual-artes-cinematograficas.pdf">Ver pensum</a>
+<br>
+<br> 
               <div class="embed-responsive embed-responsive-16by9 center-block">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/EgQUsvMOBS0"></iframe>
                   </div><br>
@@ -423,11 +430,11 @@ p {
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
-                  <h4 class="panel-title"> <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+                  <h4 class="panel-title"> <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1"
                         aria-expanded="true" aria-controls="collapseOne">Competencias específicas de la titulación en
                     Comunicación Audiovisual y Artes Cinematográficas </a> </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
                     <ul>
                       <li>Planificación y evaluación de recursos.</li>
@@ -448,9 +455,9 @@ p {
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingTwo">
                   <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                        href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Ventajas </a> </h4>
+                        href="#collapse2" aria-expanded="false" aria-controls="collapseTwo">Ventajas </a> </h4>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                   <div class="panel-body">
                     <p>La Licenciatura en Comunicación Audiovisual y Artes Cinematográficas posee un nuevo pensum
                       reestructurado en base a un aprendizaje por competencias.</p>
@@ -462,9 +469,9 @@ p {
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingThree">
                   <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                        href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Perfil del egresado </a> </h4>
+                        href="#collapse3" aria-expanded="false" aria-controls="collapseThree">Perfil del egresado </a> </h4>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
+                <div id="collapse3" class="panel-collapse collapse" role="tabpanel"
                     aria-labelledby="headingThree">
                   <div class="panel-body">
                     <p>El Licenciado/La Licenciada en Comunicación Audiovisual y Artes Cinematográficas, egresado de
@@ -512,24 +519,39 @@ p {
             </ul>
           </div>
           <div id="menu4" class="tab-pane fade">
-            <h4>Dra. Ana Bélgica Güichardo <br />
-              Directora de la Escuela de Comunicación (ExprésatePUCMM), Campus de Santo Domingo</h4>
-              <p>anabguichardo@pucmm.edu.do</p>
-            <h4>Lic. Anny Rosa <br />
-              Secretaria</h4>
-              <p> Teléfono: 809-535-0111 Ext. Escuela (2254)</p>
-              <p>annyrosa@pucmm.edu.do</p>
+            <!-- 
               <a href="http://www.instagram.com/expresatepucmm" target="_blank">
-                <i class="fa fa-instagram"></i>Sigue la escuela en Instagram
-            </a>
-              <br /><br />
-              <h4>Alejandro Esteban<br />
-                Director de la Escuela de Comunicación, Campus de Santiago</h4>
-                <p>aesteban@pucmm.edu.do</p>
-              <h4>Selene Infante <br />
-                Secretaria</h4>
-                <p>sinfante@pucmm.edu.do</p>
-                <p>Teléfono: 809 580-1962 Ext. Escuela (2254)</p>
+                <i class="fab fa-instagram-square"></i> @expresatepucmm </a>
+ -->
+
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <h4>Dra. Ana Bélgica Güichardo</h4>
+                          <h5>Directora</h5>
+                          <h5>Campus de Santo Domingo</h5>
+                          <p><a href="mailto:anabguichardo@pucmm.edu.do">anabguichardo@pucmm.edu.do</a></p>
+                          <h4>Lic. Anny Rosa</h4>  
+                          <h5>Secretaria</h5>            
+                          <span><a href="mailto:annyrosa@pucmm.edu.do">annyrosa@pucmm.edu.do</a></span>
+                          <p>Teléfono: 809-535-0111 Ext. Escuela (2254)</p>
+                        </div>
+                        <div class="col-md-6">
+                          <h4>Lic. Alejandro Esteban</h4>
+                          <h5>Director</h5>
+                          <h5>Campus de Santiago</h5>
+                          <p><a href="mailto:aesteban@pucmm.edu.do">aesteban@pucmm.edu.do</a></p>
+                          <h4>Lic. Selene Infante </h4>
+                          <h5>Secretaria</h5>
+                          <span><a href="mailto:sinfante@pucmm.edu.do">sinfante@pucmm.edu.do</a></span>
+                          <p>Teléfono: 809 580-1962 Ext. Escuela (2254)</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
           </div>
         </div>
         <hr class="hr-bottom">
