--- a/index.html
+++ b/index.html
@@ -519,32 +519,30 @@ p {
             </ul>
           </div>
           <div id="menu4" class="tab-pane fade">
-            <!-- 
-              <a href="http://www.instagram.com/expresatepucmm" target="_blank">
-                <i class="fab fa-instagram-square"></i> @expresatepucmm </a>
- -->
+            <!-- <a href="http://www.instagram.com/expresatepucmm" target="_blank">
+                <i class="fab fa-instagram-square"></i> @expresatepucmm </a> -->
 
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-md-12">
                       <div class="row">
                         <div class="col-md-6">
+                          <h3>Campus de Santo Domingo</h3>
                           <h4>Dra. Ana Bélgica Güichardo</h4>
-                          <h5>Directora</h5>
-                          <h5>Campus de Santo Domingo</h5>
+                          <span style="font-weight: 800;">Directora</span>                          
                           <p><a href="mailto:anabguichardo@pucmm.edu.do">anabguichardo@pucmm.edu.do</a></p>
                           <h4>Lic. Anny Rosa</h4>  
-                          <h5>Secretaria</h5>            
+                          <span style="font-weight: 800;">Secretaria</span>  <br>          
                           <span><a href="mailto:annyrosa@pucmm.edu.do">annyrosa@pucmm.edu.do</a></span>
                           <p>Teléfono: 809-535-0111 Ext. Escuela (2254)</p>
                         </div>
                         <div class="col-md-6">
+                          <h3>Campus de Santiago</h3>
                           <h4>Lic. Alejandro Esteban</h4>
-                          <h5>Director</h5>
-                          <h5>Campus de Santiago</h5>
+                          <span style="font-weight: 800;">Director</span>                          
                           <p><a href="mailto:aesteban@pucmm.edu.do">aesteban@pucmm.edu.do</a></p>
                           <h4>Lic. Selene Infante </h4>
-                          <h5>Secretaria</h5>
+                          <span style="font-weight: 800;">Secretaria</span><br>
                           <span><a href="mailto:sinfante@pucmm.edu.do">sinfante@pucmm.edu.do</a></span>
                           <p>Teléfono: 809 580-1962 Ext. Escuela (2254)</p>
                         </div>
