--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ p {
 .title-esc,.title-esc h1{
   color: #ffffff !important;
 }
-
+.title-cargo{
+  font-weight: 800;
+}
 .list-group-item {
     background-color: rgba(229, 232, 241, 0.5) !important;
     border: none;
@@ -529,20 +531,20 @@ p {
                         <div class="col-md-6">
                           <h3>Campus de Santo Domingo</h3>
                           <h4>Dra. Ana Bélgica Güichardo</h4>
-                          <span style="font-weight: 800;">Directora</span>                          
+                          <span class="title-cargo">Directora</span>                          
                           <p><a href="mailto:anabguichardo@pucmm.edu.do">anabguichardo@pucmm.edu.do</a></p>
                           <h4>Lic. Anny Rosa</h4>  
-                          <span style="font-weight: 800;">Secretaria</span>  <br>          
+                          <span class="title-cargo">Secretaria</span>  <br>          
                           <span><a href="mailto:annyrosa@pucmm.edu.do">annyrosa@pucmm.edu.do</a></span>
                           <p>Teléfono: 809-535-0111 Ext. Escuela (2254)</p>
                         </div>
                         <div class="col-md-6">
                           <h3>Campus de Santiago</h3>
                           <h4>Lic. Alejandro Esteban</h4>
-                          <span style="font-weight: 800;">Director</span>                          
+                          <span class="title-cargo">Director</span>                          
                           <p><a href="mailto:aesteban@pucmm.edu.do">aesteban@pucmm.edu.do</a></p>
                           <h4>Lic. Selene Infante </h4>
-                          <span style="font-weight: 800;">Secretaria</span><br>
+                          <span class="title-cargo">Secretaria</span><br>
                           <span><a href="mailto:sinfante@pucmm.edu.do">sinfante@pucmm.edu.do</a></span>
                           <p>Teléfono: 809 580-1962 Ext. Escuela (2254)</p>
                         </div>
