--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ p {
               Las personas egresadas de Comunicación Corporativa egresadas de la PUCMM se especializan en el diseño,
               gestión y dirección de proyectos y producciones de comunicación manteniendo los principios éticos que
               distinguen a los y las profesionales de la comunicación.</p>
-              <a type="button" class="btn pucmm-btn-adm text-uppercase" href="pensum-com-corporativa.pdf">Ver pensum</a>
+              <a type="button" class="btn pucmm-btn-primary text-uppercase" href="pensum-com-corporativa.pdf">Ver pensum</a>
 <br>
 <br>      
               <div class="embed-responsive embed-responsive-16by9 center-block">
@@ -422,7 +422,7 @@ p {
               propiamente audiovisuales (radio, televisión y cine), así como editoriales y digitales. Así mismo,
               abordarán con sentido creativo, integral, y ético el proceso de comunicación y la producción de
               contenidos.</p>
-              <a type="button" class="btn pucmm-btn-adm text-uppercase" href="pensum-com-audiovisual-artes-cinematograficas.pdf">Ver pensum</a>
+              <a type="button" class="btn pucmm-btn-primary text-uppercase" href="pensum-com-audiovisual-artes-cinematograficas.pdf">Ver pensum</a>
 <br>
 <br> 
               <div class="embed-responsive embed-responsive-16by9 center-block">
